Ajustement des tous les font-size à un minimum de 16px et rectification de la couleur de la quote sur l acceuil

--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ address
     display: flex;
     flex-direction: column;
     align-items: center;
+    color: #333333;
 }
 .services-quote > q 
 {
@@ -581,7 +582,7 @@ button {
 }
 
 .showScrollTop {
-    font-size: 14px;
+    font-size: 16px;
     opacity: 1;
 }
 
@@ -732,7 +733,7 @@ a {
 }
 
 p {
-    font-size: 11px;
+    font-size: 16px;
 }
 
 .tight-width-whitespace {
