Bonus: supr code inutile; verif typage form page2; verif meta keywords et ajout meta description; ajout dimensions img; conv png>avif; aria-label icones reseaux sociaux; minify js et css

--- a/style.css
+++ b/style.css
@@ -52,7 +52,12 @@ address
 {
     width: 60%;
 }
-
+/*Bonus: ajout width et height logo*/
+.col-sm-12 > img
+{
+    width: 100px;
+    height: 100px;
+}
 
 body {
     margin: 0;
@@ -147,7 +152,7 @@ a:hover {
 }
 
 .texture-paper::before {
-    background: url("img/texture-paper.png");
+    background: url("img/texture-paper.avif");
     background-size: 280px 280px;
 }
 
@@ -797,6 +802,8 @@ h4 {
 
 .portfolio-thumb {
     margin-bottom: 24px;
+    width: 100%;
+    height: auto; /*Bonus: ajout de dimensions pour les photos*/
 }
 
 .portfolio-row {
@@ -866,11 +873,11 @@ h4 {
 }
 
 .bg-dots-bg {
-    background-image: url("img/dots-bg.png");
+    background-image: url("img/dots-bg.avif");
 }
 
 .bg-lines-h2-bg {
-    background-image: url("img/lines-h2-bg.png");
+    background-image: url("img/lines-h2-bg.avif");
 }
 
 .bg-banniere {
@@ -904,13 +911,13 @@ h4 {
     }
 }
 
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) {
+@media only screen and (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
     .b-parallax {
         background-attachment: scroll;
     }
 }
 
-@media only screen and (min-device-width: 1024px) and (max-device-width: 1366px) and (-webkit-min-device-pixel-ratio: 1.5) {
+@media only screen and (min-width: 1024px) and (max-width: 1366px) and (-webkit-min-device-pixel-ratio: 1.5) {
     .b-parallax {
         background-attachment: scroll;
     }
@@ -1018,7 +1025,7 @@ h4 {
         box-shadow: none;
     }
     .navbar-brand img {
-        max-height: 40px;
+        height: 40px;
         width: auto;
     }
     .nav-invert .navbar-header {
