--- a/style.css
+++ b/style.css
@@ -152,7 +152,7 @@ a:hover {
 }
 
 .texture-paper::before {
-    background: url("img/texture-paper.avif");
+    background: url("img/texture-paper.png");
     background-size: 280px 280px;
 }
 
@@ -873,11 +873,11 @@ h4 {
 }
 
 .bg-dots-bg {
-    background-image: url("img/dots-bg.avif");
+    background-image: url("img/dots-bg.png");
 }
 
 .bg-lines-h2-bg {
-    background-image: url("img/lines-h2-bg.avif");
+    background-image: url("img/lines-h2-bg.png");
 }
 
 .bg-banniere {
